--- a/source/_assets/css/main.css
+++ b/source/_assets/css/main.css
@@ -1,8 +1,6 @@
-@tailwind base;
-
-@tailwind components;
-
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 .wctp {
   background-image: url(/assets/images/gateway.svg);
